--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: whitesmoke;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.todo-item {
+  display: flex;
+  justify-content: flex-start;
+  background-color: smokewhite;
+  text-align: center;
+  padding: 60px 20px 0;
+  border-bottom: 1px solid #cecece;
+  width: 30%;
+  font-family: Roboto, sans-serif;
+  font-weight: 100;
+  align-items: center;
+}
+input[type="checkbox"] {
+  margin-right: 10px;
+  font-size: 30px;
+  margin: 15px;
 }
